--- a/Animation2/Animation2/Base.lproj/Main.storyboard
+++ b/Animation2/Animation2/Base.lproj/Main.storyboard
@@ -48,6 +48,9 @@
                                 <state key="normal" title="登录">
                                     <color key="titleColor" red="1" green="0.39133632260000001" blue="0.86232982920000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="LoginBtnClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GKD-EA-e8s"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
